; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/smgr/extr_smgr.c_smgrdounlink.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/smgr/extr_smgr.c_smgrdounlink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 (i32, i32, i32)*, i32 (%struct.TYPE_5__*, i64)* }
%struct.TYPE_5__ = type { i32, i32 }

@MAX_FORKNUM = common dso_local global i64 0, align 8
@smgrsw = common dso_local global %struct.TYPE_6__* null, align 8
@InvalidForkNumber = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @smgrdounlink(%struct.TYPE_5__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %5, align 4
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %6, align 4
  store i64 0, i64* %7, align 8
  br label %14

14:                                               ; preds = %28, %2
  %15 = load i64, i64* %7, align 8
  %16 = load i64, i64* @MAX_FORKNUM, align 8
  %17 = icmp sle i64 %15, %16
  br i1 %17, label %18, label %31

18:                                               ; preds = %14
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** @smgrsw, align 8
  %20 = load i32, i32* %6, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i64 %21
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 1
  %24 = load i32 (%struct.TYPE_5__*, i64)*, i32 (%struct.TYPE_5__*, i64)** %23, align 8
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %26 = load i64, i64* %7, align 8
  %27 = call i32 %24(%struct.TYPE_5__* %25, i64 %26)
  br label %28

28:                                               ; preds = %18
  %29 = load i64, i64* %7, align 8
  %30 = add nsw i64 %29, 1
  store i64 %30, i64* %7, align 8
  br label %14

31:                                               ; preds = %14
  %32 = call i32 @DropRelFileNodesAllBuffers(i32* %5, i32 1)
  %33 = load i32, i32* %5, align 4
  %34 = call i32 @CacheInvalidateSmgr(i32 %33)
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** @smgrsw, align 8
  %36 = load i32, i32* %6, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i64 %37
  %39 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %38, i32 0, i32 0
  %40 = load i32 (i32, i32, i32)*, i32 (i32, i32, i32)** %39, align 8
  %41 = load i32, i32* %5, align 4
  %42 = load i32, i32* @InvalidForkNumber, align 4
  %43 = load i32, i32* %4, align 4
  %44 = call i32 %40(i32 %41, i32 %42, i32 %43)
  ret void
}

declare dso_local i32 @DropRelFileNodesAllBuffers(i32*, i32) #1

declare dso_local i32 @CacheInvalidateSmgr(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
